# Nonlocal_SMMs

./: .gitignore  Basic Structures.ipynb  Dispersion and Fields.ipynb  LICENSE  Nonlocal_TMMs.sublime-project  Nonlocal_TMMs.sublime-workspace  README.md  Transfer Matrix Methods.ipynb  dispersion.py  environment.yml  materials.py  noxfile.py  propagation.py  pyproject.toml
docs/source/: conf.py  index.rst
examples/: Basic Structures.ipynb  Figures.ipynb
materials/: materials.py
source/: core.py  helper.py  plotting.py
src/nonlocal_smms/: __init__.py  constants.py  core.py  helper.py  materials.json  materials.py  plotting.py
src/nonlocal_smms/scattering_matrix/: __init__.py  algorithm.py  helpers.py  observables.py
src/nonlocal_smms/types/: __init__.py  calculations.py  materials.py  omaterials.py
tests/: __init__.py  test_init.py
