[tool.poetry]
name = "nonlocal_smms"
version = "0.1.0"
description = "A library to calculate the nonlocal properties of 1D polar hetrostructures using a scattering matrix method"
homepage = "https://github.com/cgubbin/Nonlocal_TMMs"
repository = "https://github.com/cgubbin/Nonlocal_TMMs"
authors = ["Christopher Gubbin <c.r.gubbin@soton.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
