[tool.poetry]
name = "nonlocal_smms"
version = "0.2.0"
description = "Nonlocal solvers for the optical properties of 1D planar heterostructures"
homepage = "https://github.com/cgubbin/Nonlocal-TMMs"
repository = "https://github.com/cgubbin/Nonlocal-TMMs"
authors = ["Christopher Gubbin <c.r.gubbin@soton.ac.uk>"]

[tool.poetry.dependencies]
python = "~3.10"
aenum = "^3.1.11"
tinydb = "^4.7.1"
numba = "^0.56.4"

[tool.poetry.group.dev.dependencies]
commitizen = "^2.40.0"
ruff = "^0.0.231"
reorder-python-imports = "^3.9.0"
xdoctest = "^1.1.0"
flake8 = "^6.0.0"
flake8-import-order = "^0.18.2"
flake8-docstrings = "^1.7.0"
flake8-annotations = "^3.0.0"
flake8-bugbear = "^23.1.20"
flake8-black = "^0.3.6"
black = "^22.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
coverage = {extras = ["toml"], version = "^7.1.0"}

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["nonlocal_smms"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "cue.mod/*"

[tool.pytest.ini_options]
testpaths = [
    "python/tests"
]
